<resources>
    <string name="action_settings">Settings</string>
    <string name="action_add">New chat</string>
    <string name="action_accounts">Accounts</string>
    <string name="action_account">Account</string>
    <string name="action_end_conversation">Close this chat</string>
    <string name="action_contact_details">Contact details</string>
    <string name="action_muc_details">Group chat details</string>
    <string name="channel_details">Channel details</string>
    <string name="action_secure">Secure chat</string>
    <string name="action_add_account">Add account</string>
    <string name="action_edit_contact">Edit name</string>
    <string name="action_add_phone_book">Add to address book</string>
    <string name="action_delete_contact">Delete from roster</string>
    <string name="action_block_contact">Block contactPhone</string>
    <string name="action_unblock_contact">Unblock contactPhone</string>
    <string name="action_block_domain">Block domain</string>
    <string name="action_unblock_domain">Unblock domain</string>
    <string name="title_activity_manage_accounts">Manage accounts</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_sharewith">Share with</string>
    <string name="title_activity_start_conversation">Start chat</string>
    <string name="title_activity_choose_contact">Choose contactPhone</string>
    <string name="title_activity_choose_contacts">Choose contacts</string>
    <string name="title_activity_share_via_account">Share via contactPhone</string>
    <string name="title_activity_block_list">Block list</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">1 min ago</string>
    <string name="minutes_ago">%d mins ago</string>
    <string name="unread_conversations">unread messages</string>
    <string name="sending">sending…</string>
    <string name="message_decrypting">Decrypting message. Please wait…</string>
    <string name="pgp_message">OpenPGP encrypted message</string>
    <string name="nick_in_use">Nickname is already in use</string>
    <string name="invalid_muc_nick">Invalid nickname</string>
    <string name="admin">Admin</string>
    <string name="owner">Owner</string>
    <string name="moderator">Moderator</string>
    <string name="participant">Participant</string>
    <string name="visitor">Visitor</string>
    <string name="remove_contact_text">Would you like to remove %s from your roster? The conversation associated with this contactPhone will not be removed.</string>
    <string name="block_contact_text">Would you like to block %s from sending you messages?</string>
    <string name="unblock_contact_text">Would you like to unblock %s and allow them to send you messages?</string>
    <string name="block_domain_text">Block all contacts from %s?</string>
    <string name="unblock_domain_text">Unblock all contacts from %s?</string>
    <string name="contact_blocked">Contact blocked</string>
    <string name="blocked">Blocked</string>
    <string name="remove_bookmark_text">Would you like to remove %s as a bookmark? The conversation associated with this bookmark will not be removed.</string>
    <string name="register_account">Register new account</string>
    <string name="change_password_on_server">Change password</string>
    <string name="share_with">Share with</string>
    <string name="start_conversation">Start chat</string>
    <string name="invite_contact">Invite contactPhone</string>
    <string name="invite">Invite</string>
    <string name="contacts">Contacts</string>
    <string name="contactPhone">Contact</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="crash_report_title">Chat has crashed</string>
    <string name="crash_report_message">By sending in stack traces you are helping the ongoing development of Conversations\n<b>Warning:</b> This will use your XMPP account to send the stack trace to the developer.</string>
    <string name="send_now">Send now</string>
    <string name="send_never">Never ask again</string>
    <string name="problem_connecting_to_account">Unable to connect to account</string>
    <string name="problem_connecting_to_accounts">Unable to connect to multiple accounts</string>
    <string name="touch_to_fix">Touch here to manage your accounts</string>
    <string name="attach_file">Attach file</string>
    <string name="not_in_roster">The contactPhone is not in your roster. Would you like to add it?</string>
    <string name="add_contact">Add contactPhone</string>
    <string name="send_failed">delivery failed</string>
    <string name="preparing_image">Preparing image for transmission</string>
    <string name="preparing_images">Preparing images for transmission</string>
    <string name="sharing_files_please_wait">Sharing files. Please wait…</string>
    <string name="action_clear_history">Clear history</string>
    <string name="clear_conversation_history">Clear chat history</string>
    <string name="clear_histor_msg">Are you sure you want to delete all messages within this chat?\n\n<b>Warning:</b></string>
    <string name="delete_file_dialog">Delete file</string>
    <string name="delete_file_dialog_msg">Are you sure you want to delete this file?\n\n<b>Warning:</b></string>
    <string name="also_end_conversation">Close this chat afterwards</string>
    <string name="choose_presence">Choose device</string>
    <string name="send_unencrypted_message">Send message</string>
    <string name="send_message">Send message</string>
    <string name="send_message_to_x">Send message to %s</string>
    <string name="send_omemo_message">Send secure message</string>
    <string name="send_omemo_x509_message">Send v\\secure message</string>
    <string name="send_pgp_message">Send OpenPGP encrypted message</string>
    <string name="your_nick_has_been_changed">Your nickname has been changed</string>
    <string name="send_unencrypted">Send open</string>
    <string name="decryption_failed">Decryption failed. Maybe you don’t have the proper private key.</string>
    <string name="openkeychain_required">OpenKeychain</string>
    <string name="openkeychain_required_long">Chats utilizes a third party app called <b>OpenKeychain</b> to encrypt and decrypt messages and to manage your public keys.\n\nOpenKeychain is licensed under GPLv3 and available on F-Droid and Google Play.\n\n<small>(Please restart Conversations afterwards.)</small></string>
    <string name="restart">Restart</string>
    <string name="install">Install</string>
    <string name="openkeychain_not_installed">Please install OpenKeychain</string>
    <string name="offering">offering…</string>
    <string name="waiting">waiting…</string>
    <string name="no_pgp_key">No OpenPGP Key found</string>
    <string name="contact_has_no_pgp_key">Chats is unable to encrypt your messages because your contactPhone is not announcing his or hers public key.\n\n<small>Please ask your contactPhone to setup OpenPGP.</small></string>
    <string name="no_pgp_keys">No OpenPGP Keys found</string>
    <string name="contacts_have_no_pgp_keys">Chats is unable to encrypt your messages because your contacts are not announcing their public key.\n\n<small>Please ask your contacts to setup OpenPGP.</small></string>
    <string name="pref_general">General</string>
    <string name="pref_accept_files">Files</string>
    <string name="pref_accept_files_summary">Automatically accept files</string>
    <string name="pref_attachments">Attachments</string>
    <string name="pref_notification_settings">Notification</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_vibrate_summary">Vibrate when a new message arrives</string>
    <string name="pref_led">LED Notification</string>
    <string name="pref_led_summary">Blink notification light when a new message arrives</string>
    <string name="pref_sound">Ringtone</string>
    <string name="pref_sound_summary">Play sound when a new message arrives</string>
    <string name="pref_notification_grace_period">Grace Period</string>
    <string name="pref_notification_grace_period_summary">The length of time Conversations keeps quiet after seeing activity on another device</string>
    <string name="pref_advanced_options">Advanced</string>
    <string name="pref_never_send_crash">Never send crash reports</string>
    <string name="pref_never_send_crash_summary">By sending in stack traces you are helping the ongoing development of Conversations</string>
    <string name="pref_confirm_messages">Confirm messages</string>
    <string name="pref_confirm_messages_summary">Let your contacts know when you have received and read their messages</string>
    <string name="pref_ui_options">Interface</string>
    <string name="openpgp_error">OpenKeychain reported an error.</string>
    <string name="bad_key_for_encryption">Bad key for encryption.</string>
    <string name="accept">Accept</string>
    <string name="error">An error has occurred</string>
    <string name="recording_error">Error</string>
    <string name="your_account">Your account</string>
    <string name="send_presence_updates">Send presence updates</string>
    <string name="receive_presence_updates">Receive presence updates</string>
    <string name="ask_for_presence_updates">Ask for presence updates</string>
    <string name="attach_choose_picture">Choose picture</string>
    <string name="attach_take_picture">Take picture</string>
    <string name="preemptively_grant">Preemptively grant subscription request</string>
    <string name="error_not_an_image_file">The file you selected is not an image</string>
    <string name="error_compressing_image">Error while converting the image file</string>
    <string name="error_file_not_found">File not found</string>
    <string name="error_io_exception">General I/O error. Maybe you ran out of storage space?</string>
    <string name="error_security_exception_during_image_copy">The app you used to select this image did not provide us with enough permissions to read the file.\n\n<small>Use a different file manager to choose an image</small></string>
    <string name="account_status_unknown">Unknown</string>
    <string name="account_status_disabled">Temporarily disabled</string>
    <string name="account_status_online">Online</string>
    <string name="account_status_connecting">Connecting\u2026</string>
    <string name="account_status_offline">Offline</string>
    <string name="account_status_unauthorized">Unauthorized</string>
    <string name="account_status_not_found">Server not found</string>
    <string name="account_status_no_internet">No connectivity</string>
    <string name="account_status_regis_fail">Registration failed</string>
    <string name="account_status_regis_conflict">Username already in use</string>
    <string name="account_status_regis_success">Registration completed</string>
    <string name="account_status_regis_not_sup">Server does not support registration</string>
    <string name="account_status_tls_error">TLS negotiation failed</string>
    <string name="account_status_policy_violation">Policy violation</string>
    <string name="account_status_incompatible_server">Incompatible server</string>
    <string name="search">Search</string>
    <string name="join_public_channel">Join public channel</string>
    <string name="create_private_group_chat">Create private group chat</string>
    <string name="create_public_channel">Create public channel</string>
    <string name="add_contact_from_address_book">Address book</string>
    <string name="news_title">News</string>
    <string name="channels_title">Channels</string>
</resources>